fix: toolbar gaps

--- a/src/styles/core/layout-variables.sass
+++ b/src/styles/core/layout-variables.sass
@@ -4,3 +4,4 @@
   --cn-padding: 12px
   --cn-gap-row: 24px
   --cn-gap-column: 16px
+  --cn-gap-toolbar: 8px
